--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Pastel Evening Theme",
   "description": "Dark theme with pastel colors and a slight blue hint to the editor.",
   "publisher": "kaiusl",
-  "version": "0.3.1",
+  "version": "0.4.0",
   "icon": "icon.png",
   "license": "MIT",
   "repository": {
@@ -24,25 +24,41 @@
     "theme": "dark"
   },
   "engines": {
-    "vscode": "^1.64.0"
+    "vscode": "^1.80.0"
   },
   "contributes": {
     "themes": [
       {
         "label": "Pastel Evening Dark",
         "uiTheme": "vs-dark",
-        "path": "./themes/pastel_evening_dark.json"
+        "path": "./dist/themes/pastel_evening_dark.json"
       }
     ],
     "markdown.previewStyles": [
-      "./out/mdstyle/pastel_evening_dark.css"
+      "./dist/mdstyle/pastel_evening_dark.css"
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run build:mdstyle",
-    "build:mdstyle": "sass --no-source-map mdstyle/pastel_evening_dark.scss out/mdstyle/pastel_evening_dark.css"
+    "vscode:prepublish": "npm run build",
+    "build": "ts-node src/scripts/generate_theme.ts",
+    "watch": "nodemon --exec 'npm run build'",
+    "clean": "rm -r dist",
+    "clean_node": "rm -rf node_modules",
+    "web-test": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=./",
+    "test": "jest"
   },
   "devDependencies": {
-    "sass": "^1.57.1"
+    "@types/jest": "^29.5.11",
+    "@types/node": "^20.11.0",
+    "@types/vscode": "^1.80.0",
+    "@typescript-eslint/eslint-plugin": "^6.18.0",
+    "@typescript-eslint/parser": "^6.18.0",
+    "@vscode/vsce": "^2.22.0",
+    "eslint": "^8.56.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.0.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
