--- a/package.json
+++ b/package.json
@@ -61,13 +61,16 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run build",
-    "build": "npm run export-version && npm run compile-ts && node ./dist/src/scripts/generate_theme.js",
-    "compile-ts": "tsc -p ./",
+    "vscode:prepublish": "npm run build:publish",
+    "build:publish": "npm run export-version && npm run generate-theme && npm run webpack:publish",
+    "build:dev": "npm run export-version && npm run generate-theme && npm run webpack:dev",
+    "generate-theme": "ts-node ./src/scripts/generate_theme.ts",
     "export-version": "node -p \"'export const THEME_VERSION = ' + JSON.stringify(require('./package.json').version) + ';'\" > src/version.ts",
-    "watch": "nodemon --exec 'npm run build'",
+    "watch": "nodemon --exec 'npm run build:dev'",
     "clean": "rm -r dist",
     "clean-node": "rm -rf node_modules",
+    "webpack:dev": "webpack --mode development",
+    "webpack:publish": "webpack --mode production --devtool hidden-source-map",
     "web-test": "vscode-test-web --browserType=chromium --extensionDevelopmentPath=./",
     "test": "jest"
   },
@@ -78,10 +81,14 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
     "@vscode/vsce": "^2.22.0",
+    "@vscode/test-web": "*",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "ts-jest": "^29.1.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "ts-loader": "^9.5.1",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
